* Improvement: Security of outputted localized text strings.
* Improvement: Security of outputted data from various user-edited elements.
* Improvement: Security of outputted urls and enqueued scripts and stylesheets.
* Improvement: Filters for modifying sorting menu for post grids and post showcases.
* Fixed: WooCommerce cart thumbnail sizing issue in Firefox.
* Fixed: In executive base, standard header background elements were being outputted with Transparent header.
* Fixed: Parallax background fallback not being horizontally centered in IE9.
* Fixed: Added missing localization for theme bases admin page text.
* Fixed: Live changelog link in theme options footer not working.
* Fixed: Blog and Post Showcase page templates not obeying WordPress page privacy settings.
* Fixed: Negative horizontal margin overflow with "popout" columns element in Layout Builder.
* Fixed: Mini post lists with hidden featured images not displaying correctly.
* Removed: Support of `magic_quotes_gpc` for those using unsupported versions of PHP.
* Removed: The `themeblvd_frontend` text domain is gone; all strings localized under `themeblvd` text domain.
* Updated TGMA plugin installer to 2.5.2.
* Moved all import/export functionality to plugin: [Theme Blvd Importer](https://wordpress.org/plugins/theme-blvd-importer)

--------------------------------------------------------------

2.0.1 - 08/24/2015
------------------

* **Updated Theme Blvd framework to 2.5.1**
* Cleaned up and optimized assets in `/framework` directory, reducing file size by about 2MB.
* New: CSS class "has-nav" to footer copyright area if Footer Navigation location has menu.
* New: More accuracy for opacity selections.
* New: In custom layouts, "visible" CSS class gets added to top-level elements and sections as you scroll down the page.
* Improvement: General comments template and comments link logic.
* Improvement: Allow WooCommerce shop to accept theme-related options from original static page.