@@ -13,6 +13,7 @@ Jump Start Changelog
 * Improvement: Security of outputted data from various user-edited elements.
 * Improvement: Security of outputted urls and enqueued scripts and stylesheets.
 * Improvement: Filters for modifying sorting menu for post grids and post showcases.
+* Improvement: Nicer looking changelog in theme update system, when clicking, "View version X details."
 * Fixed: WooCommerce cart thumbnail sizing issue in Firefox.
 * Fixed: In executive base, standard header background elements were being outputted with Transparent header.
 * Fixed: Parallax background fallback not being horizontally centered in IE9.
